Minor fixes + bit more deets in README